Added package desc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_date_picker_number
-description: A new Flutter package project.
+description: Easy in use date picker supported by numerical keyboard.
 version: 1.0.0
 author: Marcin Butanowicz
 homepage: m.butan@gmail.com
