--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_date_picker_number
+name: date_picker_number
 description: Easy in use date picker supported by numerical keyboard.
 version: 1.0.0
 author: Marcin Butanowicz
