--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
 
   # Flutter Date picker number
-  date_picker_number: ^1.0.0
+  date_picker_number:
+    path: '../'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
